[tool.poetry]
name = "onlinehd"
version = "0.1.2"
license = "MIT"
description = "Efficient single-pass hyperdimensional classifier"
readme = "README.md"
repository = "https://gitlab.com/biaslab/onlinehd"
authors = ["alehd <ale.hdz333@ciencias.unam.mx>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
ninja = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
